Fixed text overflow in loot frame, merchant frame and buyback frame, fixed an issue with the merchant frame (item quantity)

--- a/css/style.css
+++ b/css/style.css
@@ -336,6 +336,7 @@ a {
 	display: flex;
 	font-size: 15px;
 	align-items: center;
+	overflow: hidden;
 }
 
 .loot-frame-item-desc-overlay {
